re work of structure

--- a/2-data-preprocessing.ipynb
+++ b/2-data-preprocessing.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,6 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import nltk\n",
-    "# nltk.download('all')\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.stem import WordNetLemmatizer\n",
@@ -67,25 +66,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "SEED = 42\n",
     "\n",
-    "CORPORA_PATH = os.path.join('corpora', 'raw-data')\n",
+    "RAW_DATA_DIR = os.path.join('corpora', 'raw-data')\n",
     "\n",
-    "TRAIN_INFO_PATH = os.path.join(CORPORA_PATH, 'train.xlsx')\n",
-    "TRAIN_REVIEWS_PATH = os.path.join(CORPORA_PATH, 'train_reviews.xlsx')\n",
+    "TRAIN_INFO_PATH = os.path.join(RAW_DATA_DIR, 'train.xlsx')\n",
+    "TRAIN_REVIEWS_PATH = os.path.join(RAW_DATA_DIR, 'train_reviews.xlsx')\n",
     "\n",
-    "TEST_INFO_PATH = os.path.join(CORPORA_PATH, 'test.xlsx')\n",
-    "TEST_REVIEWS_PATH = os.path.join(CORPORA_PATH, 'test_reviews.xlsx')\n",
+    "TEST_INFO_PATH = os.path.join(RAW_DATA_DIR, 'test.xlsx')\n",
+    "TEST_REVIEWS_PATH = os.path.join(RAW_DATA_DIR, 'test_reviews.xlsx')\n",
     "\n",
-    "TEST_MERGED_PATH = ''\n",
+    "TRAIN_MERGED_PATH = os.path.join('corpora', 'train_merged.csv')\n",
+    "TEST_MERGED_PATH = os.path.join('corpora', 'test_merged.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Data Imports**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>description</th>\n",
+       "      <th>host_about</th>\n",
+       "      <th>unlisted</th>\n",
+       "      <th>comments</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>This is a shared mixed room in our hostel, wit...</td>\n",
+       "      <td>Alojamento Local Registro: 20835/AL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>this is a very cozy and comfortable house to s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>This is a shared mixed room in our hostel, wit...</td>\n",
+       "      <td>Alojamento Local Registro: 20835/AL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>good&lt;br/&gt;</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index                                        description  \\\n",
+       "0      1  This is a shared mixed room in our hostel, wit...   \n",
+       "1      1  This is a shared mixed room in our hostel, wit...   \n",
+       "\n",
+       "                            host_about  unlisted  \\\n",
+       "0  Alojamento Local Registro: 20835/AL         0   \n",
+       "1  Alojamento Local Registro: 20835/AL         0   \n",
+       "\n",
+       "                                            comments  \n",
+       "0  this is a very cozy and comfortable house to s...  \n",
+       "1                                          good<br/>  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "train_merged_raw = pd.read_csv(TRAIN_MERGED_PATH)\n",
+    "test_merged_raw = pd.read_csv(TRAIN_MERGED_PATH)\n",
     "\n",
-    "TRAIN_MERGED_TRAIN_PATH = ''\n",
-    "TRAIN_MERGED_VAL_PATH = ''\n",
-    "TRAIN_MERGED_TEST_PATH = ''"
+    "display(train_merged_raw.head(2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Data Preprocessing**"
    ]
   },
   {
@@ -93,7 +182,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# replace pseudo nans"
+   ]
   },
   {
    "cell_type": "code",
@@ -140,10 +231,8 @@
     "# due to sheer amount of data k-fold cross-validation will not be feasible\n",
     "# so a train-val-test split is preferred\n",
     "\n",
-    "# TODO rewrite this code\n",
-    "\n",
-    "X = train_merged[[col for col in train_merged.columns if col != 'unlisted']]\n",
-    "y = train_merged['unlisted']\n",
+    "X = train_merged_raw[[col for col in train_merged.columns if col != 'unlisted']]\n",
+    "y = train_merged_raw['unlisted']\n",
     "\n",
     "def two_step_proportions(train_p, val_p, test_p):\n",
     "    \"\"\"\n",
