--- a/group-3-main.ipynb
+++ b/group-3-main.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "### **Text Mining Group Project 23-24**\n",
     "\n",
-    "##### **Group 3**\n",
+    "#### **Group 3**\n",
     "\n",
     "**Elements**:\n",
     "- Afonso Gorjão | 20230575 | 20230575@novaims.unl.pt\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,10 +86,7 @@
     "TRAIN_REVIEWS_PATH = os.path.join(RAW_DATA_DIR, 'train_reviews.xlsx')\n",
     "\n",
     "TEST_INFO_PATH = os.path.join(RAW_DATA_DIR, 'test.xlsx')\n",
-    "TEST_REVIEWS_PATH = os.path.join(RAW_DATA_DIR, 'test_reviews.xlsx')\n",
-    "\n",
-    "TRAIN_MERGED_PATH = os.path.join('corpora', 'train_merged.csv')\n",
-    "TEST_MERGED_PATH = os.path.join('corpora', 'test_merged.csv')"
+    "TEST_REVIEWS_PATH = os.path.join(RAW_DATA_DIR, 'test_reviews.xlsx')"
    ]
   },
   {
@@ -138,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -443,6 +440,19 @@
     "# is index unique in train_info?\n",
     "assert train_info['index'].nunique() == train_info.shape[0], 'Index is not unique'\n",
     "print(f'Total no. of properties in train dataset: {train_info.shape[0]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \n",
+    "assert set(train_info['index']).issuperset(set(train_reviews['index']))\n",
+    "assert set(test_info['index']).issuperset(set(test_reviews['index']))\n",
+    "\n",
+    "# ... all properties in the reviews dfs exist in the info dfs"
    ]
   },
   {
@@ -539,17 +549,6 @@
    "metadata": {},
    "source": [
     "- **Data Cleaning ahead of text field analysis**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# language detection\n",
-    "# wordcounts by field (some cleaning beforehand is needed)\n",
-    "# sentiment analysis on comments (chi-square test to check if sentiment is correlated to target)"
    ]
   },
   {
@@ -1403,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1452,52 +1451,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Saving Merged Train and Test**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 142,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Note that since there can be multiple reviews per property\n",
-    "# but only one description and host about. you'll see several\n",
-    "# duplicates of those unique columns. In data pre processing\n",
-    "# we can assess whether to treat each (review, listing) pair\n",
-    "# as independent or group our reviews data by property index !!\n",
-    "\n",
-    "# saving test_merged\n",
-    "test_merged.to_csv(os.path.join('corpora', 'test_merged.csv'), index=False)\n",
-    "\n",
-    "# saving train_merged\n",
-    "train_merged.to_csv(os.path.join('corpora', 'train_merged.csv'), index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### **Data Preprocessing**"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- **Merged Data Imports**"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# doing this to avoid running all cells above every time\n",
-    "\n",
-    "train_merged = pd.read_csv(TRAIN_MERGED_PATH)\n",
-    "test_merged = pd.read_csv(TEST_MERGED_PATH)"
+    "# data pre processing will be done to the raw, un-adultered, datasets"
    ]
   },
   {
@@ -1509,16 +1472,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing values in train_merged:\n",
+      "index             0\n",
+      "description       0\n",
+      "host_about     1029\n",
+      "unlisted          0\n",
+      "comments       2005\n",
+      "dtype: int64\n",
+      "\n",
+      "Missing values in test_merged:\n",
+      "index            0\n",
+      "description      0\n",
+      "host_about     133\n",
+      "comments       220\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "- **Handling Missing Values**"
+    "train_merged = replace_pseudo_nans(train_merged)\n",
+    "test_merged = replace_pseudo_nans(test_merged)\n",
+    "\n",
+    "print('Missing values in train_merged:')\n",
+    "print(train_merged.isna().sum())\n",
+    "\n",
+    "print('\\nMissing values in test_merged:')\n",
+    "print(test_merged.isna().sum())"
    ]
   },
   {
@@ -1526,7 +1512,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# ... we either drop them or impute them, either way it can be done\n",
+    "# after pre processing and maybe even feature engineering, e.g. TF-IDF\n",
+    "# and then use KNN to impute missing values?"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1558,7 +1548,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def remove_stop_words(text, lang='en'):\n",
+    "    pass"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1572,7 +1565,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# spacy supports several languages?"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1586,7 +1581,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# spacy supports several languages?"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1615,6 +1612,22 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Dataframe Restructuring**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# show we treat our reviews as independent or aggregate all reviews for each property?"
+   ]
   },
   {
    "cell_type": "markdown",
