data pre processing start

--- a/group-3-main.ipynb
+++ b/group-3-main.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,14 +53,15 @@
     "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.stem import WordNetLemmatizer\n",
-    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer  # lexicon-based\n",
+    "import spacy\n",
     "\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
     "import fasttext\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
     "\n",
     "from transformers import pipeline"
    ]
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -444,11 +445,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicate rows in train_info: 0\n",
+      "Duplicate rows in train_reviews: 142\n"
+     ]
+    }
+   ],
+   "source": [
+    "# are there duplicates?\n",
+    "print(f'Duplicate rows in train_info: {train_info.duplicated().sum()}')\n",
+    "print(f'Duplicate rows in train_reviews: {train_reviews.duplicated().sum()}')\n",
+    "\n",
+    "# ... there are in the reviews"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# \n",
+    "# are there properties with reviews but without description?\n",
     "assert set(train_info['index']).issuperset(set(train_reviews['index']))\n",
     "assert set(test_info['index']).issuperset(set(test_reviews['index']))\n",
     "\n",
@@ -553,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,13 +616,6 @@
     "    return text\n",
     "\n",
     "\n",
-    "def remove_functional_punctuation(text):\n",
-    "    # Remove punctuation that is not indicative of sentiment\n",
-    "    # Keep ! and ? as they can indicate sentiment\n",
-    "    text = re.sub(r'[.,;:()\\[\\]{}]', '', text)\n",
-    "    return text\n",
-    "\n",
-    "\n",
     "def remove_or_replace_mentions(text):\n",
     "    # '@' seems to be either used as a simplification of the word 'at'\n",
     "    # or a mention. Therefore, if '@' is not attached to any other characters\n",
@@ -625,12 +641,6 @@
     "    return text\n",
     "\n",
     "\n",
-    "# not used\n",
-    "def remove_or_replace_and(text):\n",
-    "    if '&' in text:\n",
-    "        text = re.sub(r'&', 'and', text)\n",
-    "\n",
-    "\n",
     "def remove_numbers(text):\n",
     "    text = re.sub(r'\\d+', '', text)\n",
     "    return text\n",
@@ -640,6 +650,13 @@
     "    # the previous transformations might end up\n",
     "    # creating duplicate whitespaces\n",
     "    text = re.sub(r'\\s+', ' ', text)\n",
+    "    return text\n",
+    "\n",
+    "\n",
+    "def remove_functional_punctuation(text):\n",
+    "    # Remove punctuation that is not indicative of sentiment\n",
+    "    # Keep ! and ? as they can indicate sentiment\n",
+    "    text = re.sub(r'[.,;:()\\[\\]{}]', '', text)\n",
     "    return text\n",
     "\n",
     "\n",
@@ -653,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,6 +710,35 @@
     "train_reviews['clean_comments'] = train_reviews['comments'].apply(clean_text)\n",
     "\n",
     "# takes around ~90s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_reviews['clean_comments'] = test_reviews['comments'].apply(clean_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"when travelling we're looking for kids friendly places to stay and antonios place was such a place it's spacious and well equipped he's friendly mother was at the apartment to greet us and she had made ready a baby bed a high chair and bought cookiesfruit and buns very nice the apartment had a hint of damp smell upon arriving but after we have had the heaters on for some time it disappeared so stay in the apartment for more than minuttes the neighborhood is nice and we found good restaurants shops and playgrounds nearby i'll recommend the apartment\""
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_reviews['clean_comments'][2]"
    ]
   },
   {
@@ -751,7 +797,9 @@
     "\n",
     "print(f\"No. of unique languages in clean_description_lang: {len(description_languages)}\")\n",
     "print(f\"No. of unique languages in clean_host_about_lang: {len(host_about_languages)}\")\n",
-    "print(f\"No. of unique languages in clean_comments_lang: {len(comments_languages)}\")"
+    "print(f\"No. of unique languages in clean_comments_lang: {len(comments_languages)}\")\n",
+    "\n",
+    "# ... note that description and host about can be in different languages!"
    ]
   },
   {
@@ -1402,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1570,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- **Removing Duplicates**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_merged = train_merged.drop_duplicates()\n",
+    "test_merged = test_merged.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- **Text Cleaning with Regular Expressions**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# all text cleaning functions have already been\n",
+    "# developed during data exploration\n",
+    "\n",
+    "train_merged['clean_description'] = train_merged['description'].apply(clean_text)\n",
+    "train_merged['clean_host_about'] = train_merged['host_about'].apply(clean_text)\n",
+    "train_merged['clean_comments'] = train_merged['comments'].apply(clean_text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Language Detection**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class created during data exploration\n",
+    "language_detector = LanguageDetector()\n",
+    "\n",
+    "train_merged['clean_description_lang'] = train_merged['clean_description'].apply(lambda text: language_detector.detect_language(text))\n",
+    "train_merged['clean_host_about_lang'] = train_merged['clean_host_about'].apply(lambda text: language_detector.detect_language(text))\n",
+    "train_merged['clean_comments_lang'] = train_merged['clean_comments'].apply(lambda text: language_detector.detect_language(text))"
    ]
   },
   {
@@ -1531,9 +1631,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# all text cleaning functions have already been\n",
-    "# developed during data exploration\n",
-    "\n"
+    "# ... apply fix?\n",
+    "# there are some languages similar to each other, e.g. spanish to catalan\n",
+    "# should we replace these rare languages with their more 'famous' cousins?"
    ]
   },
   {
@@ -1545,12 +1645,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Supported languagues account for: 0.997\n"
+     ]
+    }
+   ],
+   "source": [
+    "# firstly you need to run:\n",
+    "# python -m spacy download [model_name, e.g. en_core_web_sm]\n",
+    "# for all models\n",
+    "# NOTE: spacy sm models are built for efficiency whereas trf models are built for accuracy\n",
+    "\n",
+    "nlp_models = {\n",
+    "    'en': spacy.load('en_core_web_sm'),\n",
+    "    'pt': spacy.load('pt_core_news_sm'),\n",
+    "    'fr': spacy.load('fr_core_news_sm'),\n",
+    "    'it': spacy.load('it_core_news_sm'),\n",
+    "    'es': spacy.load('es_core_news_sm'),\n",
+    "    'de': spacy.load('de_core_news_sm'),\n",
+    "    'nl': spacy.load('nl_core_news_sm'),\n",
+    "    'pl': spacy.load('pl_core_news_sm'),\n",
+    "    'ru': spacy.load('ru_core_news_sm'),\n",
+    "    'da': spacy.load('da_core_news_sm'),\n",
+    "    'sv': spacy.load('sv_core_news_sm'),\n",
+    "    'ca': spacy.load('ca_core_news_sm'),\n",
+    "    'zh': spacy.load('zh_core_web_sm'),\n",
+    "    'ja': spacy.load('ja_core_news_sm')\n",
+    "}\n",
+    "\n",
+    "# proportion of supported languages\n",
+    "print(f\"Supported languagues account for: {sum([v for k,v in train_merged['clean_comments_lang'].value_counts().items() if k in nlp_models.keys()]) / sum(train_merged['clean_comments_lang'].value_counts()):.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def remove_stop_words(text, lang='en'):\n",
-    "    pass"
+    "# ... what if, for languages not supported by spacy we first translate them?\n",
+    "# there will be very few occurrences, so time spent will no longer be an issue!\n",
+    "\n",
+    "# DO IT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def no_stopwords_process_grouped_texts(df, text_column):\n",
+    "    # Define the correct language column based on the text column\n",
+    "    if text_column == 'clean_host_about':\n",
+    "        lang_column = 'language_host_about'\n",
+    "    elif text_column == 'clean_description':\n",
+    "        lang_column = 'language_description'\n",
+    "    elif text_column == 'clean_comments':\n",
+    "        lang_column = 'language_comment'\n",
+    "    else:\n",
+    "        raise ValueError(\"Invalid text column name\")\n",
+    "\n",
+    "    results = []\n",
+    "\n",
+    "    # Process each language group\n",
+    "    for lang, group in df.groupby(lang_column):\n",
+    "        nlp = nlp_models.get(lang, nlp_models.get('en'))  # Fallback to English if the language model is not available\n",
+    "        if nlp is None:\n",
+    "            print(f\"Warning: No model available for {lang}. Skipping this group.\")\n",
+    "            continue\n",
+    "\n",
+    "        # Use nlp.pipe for efficient processing, including lemmatization\n",
+    "        docs = nlp.pipe(group[text_column].astype(str), disable=[\"tok2vec\", \"tagger\", \"parser\", \"attribute_ruler\"])\n",
+    "        processed_texts = [' '.join([token.lemma_ for token in doc]) for doc in docs]\n",
+    "\n",
+    "        # Create a new column with the lemmatized text\n",
+    "        group['lemmatized_' + text_column] = processed_texts\n",
+    "        results.append(group)\n",
+    "\n",
+    "    # Concatenate all processed groups back into a single DataFrame\n",
+    "    return pd.concat(results) if results else df.assign(**{'lemmatized_' + text_column: pd.NA})\n"
    ]
   },
   {
@@ -1565,9 +1747,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# spacy supports several languages?"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1581,9 +1761,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# spacy supports several languages?"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1597,7 +1775,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# named entity recognition? POS? Text expansion? Spell correction? Chunking? removing rare words?"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1611,7 +1791,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# ... etc"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1633,7 +1815,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Train-Validation-Test Split**"
+    "#### **Train-Validation-Test Split**"
    ]
   },
   {
@@ -1699,13 +1881,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tfidf_vectorizer = TfidfVectorizer(use_idf=True, max_features = 20000)\n",
+    "\n",
+    "def tfidf_vectorize():\n",
+    "    pass\n",
+    "\n",
+    "# docs = list(data['text'])\n",
+    "# tfidf_vectorizer = TfidfVectorizer(use_idf=True, max_features = 20000) \n",
+    "# tfidf_vectorizer_vectors = tfidf_vectorizer.fit_transform(docs)\n",
+    "# docs = tfidf_vectorizer_vectors.toarray()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Word2Vec**"
+    "- **Word2Vec / Skip-Gram**"
    ]
   },
   {
@@ -1748,6 +1940,21 @@
    "metadata": {},
    "source": [
     "#### **Classification Models**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. get data\n",
+    "# 2. transform data\n",
+    "# 3. split data\n",
+    "# 4. pre process data\n",
+    "# 5. apply feature engineering\n",
+    "# 6. fit model\n",
+    "# 7. evaluate model"
    ]
   },
   {
